@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-20T01:43:36Z",
-  "count" : 121,
+  "timestamp" : "2025-07-03T01:44:52Z",
+  "count" : 52,
   "count_minmax" : [ 23, 121 ],
-  "count_decinc" : [ -0, +121 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "count_decinc" : [ -69, +121 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
