@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-07-02T01:44:33Z",
-  "count" : 21,
-  "count_minmax" : [ 21, 21 ],
-  "count_decinc" : [ -0, +21 ],
+  "timestamp" : "2025-07-03T01:44:52Z",
+  "count" : 120,
+  "count_minmax" : [ 21, 120 ],
+  "count_decinc" : [ -0, +120 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
