@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-07-02T01:44:33Z",
-  "count_outdated" : 259307,
-  "uniques_outdated" : 2659,
-  "count" : 261031,
-  "uniques" : 2687,
+  "timestamp" : "2025-07-03T01:44:52Z",
+  "count_outdated" : 259429,
+  "uniques_outdated" : 2662,
+  "count" : 261152,
+  "uniques" : 2689,
   "clones" : [
     {
-      "timestamp": "2025-06-18T00:00:00Z",
-      "count": 53,
-      "count_minmax": [ 23, 122 ],
-      "count_decinc": [ 69, 122 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
-    {
       "timestamp": "2025-06-19T00:00:00Z",
-      "count": 121,
+      "count": 52,
       "count_minmax": [ 23, 121 ],
-      "count_decinc": [ 0, 121 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 69, 121 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-06-20T00:00:00Z",
@@ -133,12 +124,21 @@
     },
     {
       "timestamp": "2025-07-02T00:00:00Z",
-      "count": 21,
-      "count_minmax": [ 21, 21 ],
-      "count_decinc": [ 0, 21 ],
+      "count": 120,
+      "count_minmax": [ 21, 120 ],
+      "count_decinc": [ 0, 120 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-03T00:00:00Z",
+      "count": 22,
+      "count_minmax": [ 22, 22 ],
+      "count_decinc": [ 0, 22 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
